# awesome-feature-navigation

./: .gitattributes  .gitignore  Makefile  README.md  main.py  pyproject.toml  trajectory.csv
.github/workflows/: ci.yml
awesome-feature-navigation-solution/: README.md  pyproject.toml  right_cam.csv  trajectory.csv  trajectory_laps.csv  trajectory_raw.csv
awesome-feature-navigation-solution/awesome_feature_navigation/: cli.py  imu_io.py  imu_preintegration.py  line_detection.py  plotting.py  trajectory.py  tuner.py
awesome-feature-navigation-solution/docs/: decisions.md
awesome-feature-navigation-solution/examples/: config.yaml  right_cam.yaml
badges/: coverage.json
configs/: right_camera.yaml  right_camera_2laps.yaml
data/: camchain-imucam-imu_calibration.yaml  imu-imu_calibration.yaml  timestamps2.csv
docs/: algorithm.md  commands.md  work.md
line_navigation/: README.md  main.py  pyproject.toml  pyrightconfig.json
line_navigation/classes/: config_tuner.py  line_config.yaml  line_detector.py
one-pixel-width/: main.py  pyproject.toml
presentation/: main.aux  main.fdb_latexmk  main.fls  main.nav  main.out  main.tex  main.toc  presentation.tex  speach.tex
resources/: imu_data.csv  imu_fixed.csv
scripts/: coverage_summary.py
src/awesome_feature_navigation/: __init__.py  auto_config.py  calibration.py  cli.py  fusion.py  fusion_cli.py  imu_io.py  imu_preintegration.py  line_detection.py  plotting.py  trajectory.py
tests/: test_auto_config.py  test_calibration.py  test_cli_helpers.py  test_fusion.py  test_imu_io.py  test_imu_more.py  test_line_detection.py  test_line_detection_more.py  test_offline_tape_line.py  test_plotting.py  test_trajectory_edge_cases.py  test_trajectory_helpers.py  test_trajectory_video_paths.py
