[project]
name = "awesome-feature-navigation"
version = "0.1.0"
description = "Lightweight right-camera video + IMU trajectory estimation"
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
  "numpy>=1.26,<3",
  "opencv-python>=4.8",
  "pandas>=2.0",
  "plotly>=5.20",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
gtsam = [
  "gtsam>=4.2",
]

[project.scripts]
afn-run = "awesome_feature_navigation.cli:main"
afn-fuse = "awesome_feature_navigation.fusion_cli:main"

[dependency-groups]
dev = [
  "mypy>=1.13",
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "ruff>=0.8",
  "types-pyyaml>=6.0.12",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
package = true

[tool.pytest.ini_options]
addopts = [
  "--strict-config",
  "--strict-markers",
]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = [
  ".venv",
  "outputs",
  "src/awesome_feature_navigation.egg-info",
]

[tool.ruff.lint]
select = [
  "ANN",
  "B",
  "D",
  "E",
  "F",
  "I",
  "RUF",
]
ignore = [
  "ANN401",
  "B905",
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "D105",
  "D107",
  "E501",
  "RUF007",
  "RUF046",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.10"
files = ["src/awesome_feature_navigation", "tests"]
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
