[project]
name = "awesome-feature-navigation"
version = "0.1.0"
description = "Trajectory estimation from red-tape video + IMU (preintegration + lightweight fusion)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy<2",
  "opencv-python>=4.8",
  "matplotlib>=3.7",
  "plotly>=5.20",
  #"gtsam>=4.2",
  "pyyaml>=6.0",
  "pandas>=2.0",
]

[project.scripts]
afn-run = "awesome_feature_navigation.cli:main"
afn-tune = "awesome_feature_navigation.tuner:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
